# studio-cockpit

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  GEMINI.md  IMPROVEMENT_PLAN.md  README.md  package-lock.json  package.json
PTSL_SDK_CPP.2025.10.0.1232349/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
PTSL_SDK_CPP.2025.10.0.1232349/CMake/: Config.cmake.in  DependenciesTargets.cmake.in  Install.cmake  PTSLPresets.json  Sources.cmake  Utils.cmake
PTSL_SDK_CPP.2025.10.0.1232349/Config/: cmakedeps_hidden.patch  cmakedeps_universal.patch  cmakepresets.py  ptsl_build_script.py  ptsl_package_conanfile.py  requirements.txt  settings.yml  universal_toolchain.cmake.jinja
PTSL_SDK_CPP.2025.10.0.1232349/Documentation/: commands.doxygen  release_notes.doxygen
PTSL_SDK_CPP.2025.10.0.1232349/Documentation/howto/: batch_jobs.doxygen  events.doxygen  howto.doxygen
PTSL_SDK_CPP.2025.10.0.1232349/Resources/: Info.plist.in
PTSL_SDK_CPP.2025.10.0.1232349/Source/: CppAsync.cpp  CppAsync.h  CppCryptoUtils.cpp  CppCryptoUtils.h  CppPTSLC_DefaultRequest.cpp  CppPTSLC_DefaultRequest.h  CppPTSLClient.cpp  CppPTSLClient.h  CppPTSLClientInternal.h  CppPTSLCommon.h  CppPTSLCommonConversions.cpp  CppPTSLCommonConversions.h  CppPTSLRequest.cpp  CppPTSLRequest.h  CppPTSLResponse.cpp  CppPTSLResponse.h  PTSL.2024.06.0.proto  PTSL.2024.10.0.proto  PTSL.2025.06.0.proto  PTSL_Versions.h
PTSL_SDK_CPP.2025.10.0.1232349/Source/Commands/: CppPTSLC_Clear.cpp  CppPTSLC_ClearAllMemoryLocations.cpp  CppPTSLC_ClearMemoryLocation.cpp  CppPTSLC_ClearSpecial.cpp  CppPTSLC_ClearUndoQueue.cpp  CppPTSLC_CloseSession.cpp  CppPTSLC_ConsolidateClip.cpp  CppPTSLC_Copy.cpp  CppPTSLC_CopySpecial.cpp  CppPTSLC_CreateFade.cpp  CppPTSLC_CreateFadesBasedOnPreset.cpp  CppPTSLC_CreateMemoryLocation.cpp  CppPTSLC_CreateNewTracks.cpp  CppPTSLC_CreateSession.cpp  CppPTSLC_Cut.cpp  CppPTSLC_CutSpecial.cpp  CppPTSLC_DuplicateSelection.cpp  CppPTSLC_EditMemoryLocation.cpp  CppPTSLC_ExportClipsAsFiles.cpp  CppPTSLC_ExportMix.cpp  CppPTSLC_ExportSelectedTracksAsAAFOMF.cpp  CppPTSLC_ExportSessionInfoAsText.cpp  CppPTSLC_ExtendSelectionToTargetTracks.cpp  CppPTSLC_GetDynamicProperties.cpp  CppPTSLC_GetEditMode.cpp  CppPTSLC_GetEditModeOptions.cpp  CppPTSLC_GetEditTool.cpp  CppPTSLC_GetFileLocation.cpp  CppPTSLC_GetMainCounterFormat.cpp  CppPTSLC_GetMemoryLocations.cpp  CppPTSLC_GetMemoryLocationsManageMode.cpp  CppPTSLC_GetPTSLVersion.cpp  CppPTSLC_GetPlaybackMode.cpp  CppPTSLC_GetRecordMode.cpp  CppPTSLC_GetSessionAudioFormat.cpp  CppPTSLC_GetSessionAudioRatePullSettings.cpp  CppPTSLC_GetSessionBitDepth.cpp  CppPTSLC_GetSessionFeetFramesRate.cpp  CppPTSLC_GetSessionIDs.cpp  CppPTSLC_GetSessionInterleavedState.cpp  (+79 more)
PTSL_SDK_CPP.2025.10.0.1232349/docs/html/: a00002.html  a00005.html  a00005_source.html  a00008.html  a00008_source.html  a00011.html  a00014.html  a00017.html  a00017_source.html  a00020.html  a00023.html  a00023_source.html  a00026.html  a00029.html  a00032.html  a00035.html  a00035_source.html  a00038.html  a00038_source.html  a00041.html  a00044.html  a00044_source.html  a00047.html  a00047_source.html  a00050.html  a00050_source.html  a00053.html  a00056.html  a00059.html  a00062.html  a00065.html  a00068.html  a00071.html  a00074.html  a00077.html  a00080.html  a00083.html  a00086.html  a00089.html  a00092.html  (+1204 more)
PTSL_SDK_CPP.2025.10.0.1232349/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+117 more)
PTSL_SDK_CPP.2025.10.0.1232349/docs/latex/: a00002.tex  a00005.tex  a00005_source.tex  a00008.tex  a00008_source.tex  a00011.tex  a00014.tex  a00017.tex  a00017_source.tex  a00020.tex  a00023.tex  a00023_source.tex  a00026.tex  a00029.tex  a00032.tex  a00035.tex  a00035_source.tex  a00038.tex  a00038_source.tex  a00041.tex  a00044.tex  a00044_source.tex  a00047.tex  a00047_source.tex  a00050.tex  a00050_source.tex  a00053.tex  a00056.tex  a00059.tex  a00062.tex  a00065.tex  a00068.tex  a00071.tex  a00074.tex  a00077.tex  a00080.tex  a00083.tex  a00086.tex  a00089.tex  a00092.tex  (+636 more)
PTSL_SDK_CPP.2025.10.0.1232349/examples/ptslcmd/: CMakeLists.txt  CMakePresets.json  conanfile.py
PTSL_SDK_CPP.2025.10.0.1232349/examples/ptslcmd.2024.06.0/: CMakeLists.txt  CMakePresets.json
PTSL_SDK_CPP.2025.10.0.1232349/examples/ptslcmd.2024.06.0/CMake/: Sources.cmake
PTSL_SDK_CPP.2025.10.0.1232349/examples/ptslcmd.2024.06.0/Source/: Clear.cpp  ClearAllMemoryLocations.cpp  ClearMemoryLocation.cpp  ClearSpecial.cpp  ClearUndoQueue.cpp  CloseSession.cpp  CommandLineParser.cpp  CommandLineParser.h  Common.h  ConsolidateClip.cpp  Copy.cpp  CopySpecial.cpp  CreateFadesBasedOnPreset.cpp  CreateMemoryLocation.cpp  CreateNewTracks.cpp  CreateSession.cpp  Cut.cpp  CutSpecial.cpp  DuplicateSelection.cpp  EditMemoryLocation.cpp  ExportClipsAsFiles.cpp  ExportMix.cpp  ExportSelectedTracksAsAAFOMF.cpp  ExportSessionInfoAsText.cpp  ExtendSelectionToTargetTracks.cpp  FileScriptParser.cpp  FileScriptParser.h  GetDynamicProperties.cpp  GetEditMode.cpp  GetEditModeOptions.cpp  GetEditTool.cpp  GetFileLocation.cpp  GetMainCounterFormat.cpp  GetMemoryLocations.cpp  GetMemoryLocationsManageMode.cpp  GetPTSLVersion.cpp  GetPlaybackMode.cpp  GetRecordMode.cpp  GetSessionAudioFormat.cpp  GetSessionAudioRatePullSettings.cpp  (+84 more)
PTSL_SDK_CPP.2025.10.0.1232349/examples/ptslcmd/CMake/: Sources.cmake
PTSL_SDK_CPP.2025.10.0.1232349/examples/ptslcmd/Source/: CommandLineParser.cpp  CommandLineParser.h  Constants.h  FileScriptParser.cpp  ptslcmd.cpp  (+7 more)
PTSL_SDK_CPP.2025.10.0.1232349/setup/: _get_python_command.py  _subprocess_wrapper.py  build_cpp_ptsl_sdk.py  gen_version_cfg_cpp_ptsl_sdk.py  ptsl_package_version.json
(+201 files in other folders)
